<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:visibility="visible"
    tools:context="com.example.dredhat.tp_cdam.Login.ForgotPassword">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="87dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/reset_pass"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rlayout_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <EditText
            android:id="@+id/rEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="26dp"
        android:text="@string/recovering_account"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/enter_your_email_address"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

    <Button
        android:id="@+id/rConfirm"
        android:layout_width="123dp"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/rounded_button"
        android:text="@string/confirm"
        android:textColor="@android:color/background_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/digitInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rlayout_bg"
        android:hint="Enetr 4 Digits Verification"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/rConfirm"
        app:layout_constraintLeft_toRightOf="@+id/rConfirm"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.466">

        <EditText
            android:id="@+id/digitVerif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            android:visibility="visible"
            app:layout_constraintLeft_toRightOf="@+id/rConfirm"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rConfirm" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/hints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="22dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/eneter_your_email_address_and_then_n_click_the_confirm_button"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/background_light"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rConfirm"/>

</android.support.constraint.ConstraintLayout>
